syntax = "proto3";

package hello;

option go_package = "application/api/proto/hello";

import "api/proto/common/types.proto";

service HelloService {
    rpc SayHello(HelloRequest) returns (HelloResponse);
    rpc SayHelloStream(HelloRequest) returns (stream HelloResponse);
    rpc GetGreetings(common.PaginationRequest) returns (GreetingsResponse);
}

message HelloRequest {
    string name = 1;
    string language = 2;
}

message HelloResponse {
    string message = 1;
    int64 timestamp = 2;
}

message Greeting {
    string id = 1;
    string message = 2;
    string language = 3;
    int64 created_at = 4;
}

message GreetingsResponse {
    repeated Greeting greetings = 1;
    common.PaginationResponse pagination = 2;
}
